--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -12,6 +12,8 @@ reviews:
     enabled: true
     drafts: false
     base_branches:
-      - *
+      - main
+      - master
+      - dev
 chat:
   auto_reply: true
